# qcrab

./: .gitignore  Cargo.toml  Makefile  README.org
basis_sets/: dz.json  dzp.json  sto-3g.json
docs/: main.tex  refs.bib
inp/: geom.xyz
src/: eri.rs  hf.rs  hf_libint.rs  hf_tests.rs  lib.rs  main.rs  mol_tests.rs  molecule.rs
src/hf_libint/: basis.rs  contraction.rs  engine.rs  shell.rs
