[package]
name = "qcrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31.3"
approx = "0.5.1"
itertools = "0.10.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
